--- a/ChallengeApp/res/layout/create_challenge_activity.xml
+++ b/ChallengeApp/res/layout/create_challenge_activity.xml
@@ -28,27 +28,6 @@
                 android:layout_height="match_parent" >
 
                 <LinearLayout
-                    android:id="@+id/challengeListTab"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical" >
-
-                    <TextView
-                        android:id="@+id/challengesList"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/challengeList"
-                        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-                    <ListView
-                        android:id="@+id/challengesListView"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" >
-                    </ListView>
-
-                </LinearLayout>
-
-                <LinearLayout
                     android:id="@+id/createChallengeTab"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -58,23 +37,22 @@
                         android:id="@+id/createAChallenge"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:gravity="center"
                         android:text="@string/createAChallenge"
                         android:textAppearance="?android:attr/textAppearanceLarge" />
 
                     <EditText
                         android:id="@+id/challengeName"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="18dp"
                         android:ems="10"
-                        android:hint="@string/challengeName" >
-
-                        <requestFocus />
-                    </EditText>
+                        android:hint="@string/challengeName" />
 
                     <EditText
                         android:id="@+id/challengeDescription"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ems="10"
                         android:hint="@string/challengeDescription" />
@@ -95,9 +73,34 @@
 
                     <Button
                         android:id="@+id/createChallengeButton"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                       	android:layout_width="200dp"
+	    				android:layout_height="wrap_content"
+	    				android:layout_gravity="center"
+	    				android:layout_marginTop="10dp"
                         android:text="@string/createChallengeButton" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/challengeListTab"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical" >
+
+                    <TextView
+                        android:id="@+id/challengesList"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:text="@string/challengeList"
+                        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+                    <ListView
+                        android:id="@+id/challengesListView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" >
+                    </ListView>
+
                 </LinearLayout>
 
             </FrameLayout>
