--- a/ChallengeApp/res/layout/create_challenge_activity.xml
+++ b/ChallengeApp/res/layout/create_challenge_activity.xml
@@ -28,6 +28,47 @@
                 android:layout_height="match_parent" >
 
                 <LinearLayout
+                    android:id="@+id/challengeListTab"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical" >
+
+                    <TextView
+                        android:id="@+id/challengesList"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:text="@string/challengeList"
+                        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+                    <RadioButton
+                        android:id="@+id/myChallengesRadioButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/myChallengesRadioButton" />
+
+                    <RadioButton
+                        android:id="@+id/myFriendsChallengesRadioButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/myFriendsChallengesRadioButton" />
+
+                    <RadioButton
+                        android:id="@+id/allChallengesRadioButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/allChallengesRadioButton" />
+
+                    <ListView
+                        android:id="@+id/challengesListView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" >
+                    </ListView>
+
+                </LinearLayout>
+
+                <LinearLayout
                     android:id="@+id/createChallengeTab"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -78,28 +119,6 @@
 	    				android:layout_gravity="center"
 	    				android:layout_marginTop="10dp"
                         android:text="@string/createChallengeButton" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/challengeListTab"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical" >
-
-                    <TextView
-                        android:id="@+id/challengesList"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="10dp"
-                        android:text="@string/challengeList"
-                        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-                    <ListView
-                        android:id="@+id/challengesListView"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" >
-                    </ListView>
 
                 </LinearLayout>
 
