--- a/ChallengeApp/res/menu/create_a_challenge_menu.xml
+++ b/ChallengeApp/res/menu/create_a_challenge_menu.xml
@@ -6,9 +6,9 @@
     
     
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/logout"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/logout"
         app:showAsAction="never"/>
 
 </menu>
